# voxscribe

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CLI.md  INSTALL.md
scripts/: check_env.py
tests/: conftest.py  test_config.py  test_exporters.py  test_merger.py  test_models.py
voxscribe/: __init__.py  _utils.py  cli.py  config.py  models.py  pipeline.py
voxscribe/alignment/: __init__.py  merger.py
voxscribe/audio/: __init__.py  extractor.py
voxscribe/diarization/: __init__.py  base.py  pyannote.py  simple.py
voxscribe/exporters/: __init__.py  base.py  json_exporter.py  markdown_exporter.py  srt_exporter.py  txt_exporter.py  vtt_exporter.py
voxscribe/realtime/: __init__.py  capture.py  display.py  streamer.py
voxscribe/summarization/: __init__.py  ollama.py
voxscribe/transcription/: __init__.py  base.py  faster_whisper.py  whisperx.py
