[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxscribe"
version = "0.1.0"
description = "Local, privacy-preserving transcription and speaker diarization for any audio or video file."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "VoxScribe Contributors" }]
keywords = ["transcription", "diarization", "whisper", "speech-to-text", "audio", "video", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── Core dependencies (always installed) ────────────────────────────────────
# faster-whisper replaces openai-whisper: 4x faster, no Python 3.13 issues,
# same model weights, built-in VAD via silero.
dependencies = [
    "faster-whisper>=1.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.3.5",
    "python-dotenv>=1.0.0",
    "ffmpeg-python>=0.2.0",
]

# ── Optional extras ──────────────────────────────────────────────────────────
[project.optional-dependencies]
# Best-in-class speaker diarization (requires HuggingFace token)
diarization = [
    "pyannote-audio>=3.1.0",
]
# Word-level timestamps + integrated diarization via forced alignment
alignment = [
    "whisperx>=3.0.0",
]
# Local LLM summarization via Ollama
summarization = [
    "ollama>=0.4.0",
]
# Full SOTA stack: all optional extras combined
full = [
    "pyannote-audio>=3.1.0",
    "whisperx>=3.0.0",
    "ollama>=0.4.0",
]
# Development toolchain
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
voxscribe = "voxscribe.cli:app"

[project.urls]
Homepage = "https://github.com/JuanLara18/Meeting-Scribe"
Repository = "https://github.com/JuanLara18/Meeting-Scribe"
"Bug Tracker" = "https://github.com/JuanLara18/Meeting-Scribe/issues"

# ── Hatch build configuration ────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["voxscribe"]

# ── Ruff linter configuration ────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W"]
ignore = ["E501"]

# ── Pytest configuration ─────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning"]

# ── Mypy configuration ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
